# AoC

./: Cargo.toml
2023/: README.md  justfile
2023/daily-template/src/: part1.rs  part2.rs
2023/day-01/src/: part1.rs  part2.rs
2023/day-02/src/: part1.rs  part2.rs
2023/day-03/src/: part1.rs  part2.rs
2023/day-04/src/: part1.rs  part2.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: part1.rs  part2.rs
2023/day-06/benches/: benchmarks.rs
2023/day-06/src/: part1.rs  part2.rs
2023/day-07/: test.txt
2023/day-07/src/: part1.rs  part2.rs
2023/day-08/: Cargo.toml
2023/day-08/benches/: benchmarks.rs
2023/day-08/src/: part1.rs  part2.rs
2023/day-09/benches/: benchmarks.rs
2023/day-09/src/: part1.rs  part2.rs
src/: day1.rs  lib.rs  main.rs  utils.rs
src/aux/: utils.rs
