[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.5"
regex = "1.7.0"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
phf = { version = "0.11.1", features = ["macros"] }
